Plugin now loads a module 'start' at startup and invokes the two event handlers 'onStart' and 'onMapFrameChanged'